tests/compile-fail/compile_fail__type_error__stackless__jump_logical_result.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:28:17
   │
28 │             if (2.0 && 3.0) goto label;
   │                 ^^^ -- expects an integer
   │                 │    
   │                 a float


